Bug 1624711 - Traverse and Unlink MediaSession::mActionHandlers r=alwu

Differential Revision: https://phabricator.services.mozilla.com/D68091